Tabs didn't redraw correctly when viewed on a small screen - left gaps at the top and bottom of the smaller tabs

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -138,12 +138,13 @@ a
     position: absolute
     bottom: 0
     right: 0
-    
-.tab
+
+.tabstyle
     padding: 5px
     background-color: #525252
     border-top-left-radius: 5px
     border-top-right-radius: 5px
+    border-left: 1px solid #333333
     
 .biggertext
     font-size: 18px
